--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "gulp": "^3.9.1",
+        "gulp-composer": "^0.4.5",
+        "gulp-install": "^1.1.0",
+        "gulp-shell": "^0.6.5"
     }
 }
